Rename wled-native to wled throughout project
All files, folders, and Xcode project references have been renamed from 'wled-native' to 'wled' for consistency and clarity. This includes source files, assets, configuration files, and project settings.

--- a/wled.xcodeproj/xcshareddata/xcschemes/wled.xcscheme
+++ b/wled.xcodeproj/xcshareddata/xcschemes/wled.xcscheme
@@ -17,7 +17,7 @@
                BlueprintIdentifier = "C9A9E5BC2918D1C3005B5C22"
                BuildableName = "WLED.app"
                BlueprintName = "WLED"
-               ReferencedContainer = "container:wled-native.xcodeproj">
+               ReferencedContainer = "container:wled.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -47,7 +47,7 @@
             BlueprintIdentifier = "C9A9E5BC2918D1C3005B5C22"
             BuildableName = "WLED.app"
             BlueprintName = "WLED"
-            ReferencedContainer = "container:wled-native.xcodeproj">
+            ReferencedContainer = "container:wled.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -64,7 +64,7 @@
             BlueprintIdentifier = "C9A9E5BC2918D1C3005B5C22"
             BuildableName = "WLED.app"
             BlueprintName = "WLED"
-            ReferencedContainer = "container:wled-native.xcodeproj">
+            ReferencedContainer = "container:wled.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
