Track Swift Package Manager resolved versions
Updated `.gitignore` to explicitly track the `Package.resolved` file within the Xcode project workspace. This ensures that the exact versions of Swift Package Manager dependencies are version-controlled, leading to more consistent and reproducible builds across different development environments.

--- a/.gitignore
+++ b/.gitignore
@@ -102,6 +102,7 @@ iOSInjectionProject/
 !*.xcodeproj/xcshareddata/
 !*.xcworkspace/contents.xcworkspacedata
 **/xcshareddata/WorkspaceSettings.xcsettings
+!*.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/Package.resolved
 
 # End of https://www.toptal.com/developers/gitignore/api/swift,xcode
 
