--- a/wled.xcodeproj/xcshareddata/xcschemes/wled.xcscheme
+++ b/wled.xcodeproj/xcshareddata/xcschemes/wled.xcscheme
@@ -28,6 +28,19 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "882CC9122F05CFE00080567C"
+               BuildableName = "WLEDTests.xctest"
+               BlueprintName = "WLEDTests"
+               ReferencedContainer = "container:wled.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
